[gd_scene load_steps=2 format=3 uid="uid://dde1ytog1d2d"]

[ext_resource type="Script" path="res://scenes/UI/score_labels.gd" id="1_t4yd0"]

[node name="ScoreLabels" type="HBoxContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t4yd0")

[node name="NumberLabel" type="Label" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Placment"

[node name="NameLabel" type="Label" parent="."]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
text = "Name"

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 2
text = "Score"
horizontal_alignment = 2
